ndb - bug#51775 - Make sure that we don't get woken up if not waiting